[package]
name = "fdcan"
version = "0.1.0"
authors = [
        "Richard Meadows <richard@richard.fish>",
        "Cor Peters <c.peters@eekels.com>"
]
edition = "2018"
description = "STM32 FDCAN peripheral driver"
documentation = "https://docs.rs/fdcan/"
repository = "https://github.com/stm32-rs/fdcan.git"
keywords = ["can", "hal", "bus"]
categories = ["no-std", "embedded"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["fdcan_g0_g4_l5"]
targets = ["thumbv7em-none-eabihf"]

[features]
fdcan_g0_g4_l5 = []             # Peripheral map found on G0 G4 L5
fdcan_h7 = []                   # Peripheral map found on H7

[dependencies]
bitflags = "1.3.2"
paste = "1.0"
vcell = "0.1.3"
nb = "1.0.0"
static_assertions = "1.1"

[dependencies.embedded-can-03]
version = "0.3"
optional = true
package = "embedded-can"


[profile.test]
opt-level = "s"
