[package]
name = "fdcan"
version = "0.2.1"
authors = [
        "Richard Meadows <richard@richard.fish>",
        "Cor Peters <c.peters@eekels.com>"
]
edition = "2018"
description = "STM32 FDCAN peripheral driver"
documentation = "https://docs.rs/fdcan/"
repository = "https://github.com/stm32-rs/fdcan.git"
keywords = ["can", "hal", "bus"]
categories = ["no-std", "embedded"]
license = "MIT/Apache-2.0"
readme = "README.md"

[package.metadata.docs.rs]
features = ["fdcan_g0_g4_l5"]
targets = ["thumbv7em-none-eabihf"]

[features]
fdcan_g0_g4_l5 = []                  # Peripheral map found on G0 G4 L5
fdcan_h7 = []                        # Peripheral map found on H7
embedded-can-04 = ["embedded-can"]   # Implement embedded-can 0.4 compatible traits

[dependencies]
bitflags = "1.3.2"
embedded-can = { version = "0.4", optional = true }
paste = "1.0"
vcell = "0.1.3"
nb = "1.0.0"
static_assertions = "1.1"
volatile-register = "0.2.1"

[profile.test]
opt-level = "s"
